feat: migrate monitoring to DB
